# cpp-jsonlib

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mkdocs.yml  vcpkg.json
.github/workflows/: doxygen.yml
cmake/: cpp-jsonlib-config.cmake.in  jsonlib-config.cmake.in  jsonlibConfig.cmake.in  mysvac-cpp-jsonlib-config.cmake.in  mysvac-jsonlib-config.cmake.in
custom-overlay/cpp-jsonlib/: portfile.cmake  usage  vcpkg.json
docs/: index.md
docs/zh/: Type.md  namespace.md  type_name.md
docs/zh/Json/: Json.md  at.md  constructor.md  contains.md  destructor.md  dump.md  dumpf.md  empty.md  erase.md  get_arr.md  get_bol.md  get_nul.md  get_num.md  get_obj.md  get_str.md  insert.md  is_arr.md  is_bol.md  is_nul.md  is_num.md  is_obj.md  is_str.md  move.md  move_if.md  move_or.md  operator_assign.md  operator_bracket.md  operator_eq.md  parse.md  pop_back.md  push_back.md  reset.md  size.md  to.md  to_if.md  to_or.md  type.md  write.md  writef.md
docs/zh/concept/: constructible.md  constructible_array.md  constructible_map.md  convertible.md  convertible_array.md  convertible_map.md  json_type.md
include/: jsonlib.h
include/mysvac/: json_macros.hpp
modules/mysvac/: json.ixx
others/: Doxyfile  Jsonlib.ixx  Serializable.hpp  header.html
others/documents/html/: annotated.html  class_json_1_1_json_array-members.html  class_json_1_1_json_array.html  class_json_1_1_json_basic-members.html  class_json_1_1_json_basic.html  class_json_1_1_json_exception-members.html  class_json_1_1_json_exception.html  class_json_1_1_json_object-members.html  class_json_1_1_json_object.html  class_json_1_1_json_structure_exception-members.html  class_json_1_1_json_structure_exception.html  class_json_1_1_json_type_exception-members.html  class_json_1_1_json_type_exception.html  class_json_1_1_json_value-members.html  class_json_1_1_json_value.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_b.html  functions_c.html  functions_e.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_e.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_j.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_g.html  functions_h.html  functions_i.html  (+23 more)
others/documents/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
others/documents/latex/: annotated.tex  class_json_1_1_json_array.tex  class_json_1_1_json_basic.tex  class_json_1_1_json_exception.tex  class_json_1_1_json_object.tex  class_json_1_1_json_structure_exception.tex  class_json_1_1_json_type_exception.tex  class_json_1_1_json_value.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  jsonlib_8cpp.tex  jsonlib_8cpp_source.tex  jsonlib_8h.tex  jsonlib_8h_source.tex  namespace_json.tex  namespaces.tex  refman.tex
src/: jsonlib.cpp
test/: CMakeLists.txt  g_test.cpp  main.cpp  test.cpp
test/file_test/: deserialize.cpp  serialize.cpp
test/macros_test/: complex.cpp  simple.cpp
test/other_test/: arr_map.cpp  equal.cpp  move.cpp  os.cpp  to.cpp  type.cpp
test/readme/: readme.cpp
test/value_test/: value_array.cpp  value_bool.cpp  value_complex.cpp  value_deserialize.cpp  value_null.cpp  value_number.cpp  value_object.cpp  value_string.cpp  value_type.cpp
